hphp/test/slow/reified_generics/error-erased-generic-fun-2.php.expectf
Fatal error: Function f does not expect a reified generic at index 1 in %s on line 4
